working web page v1

--- a/envirozen/controller/templates/server.html
+++ b/envirozen/controller/templates/server.html
@@ -22,15 +22,15 @@
     <p>Actuator - State: <!-- Replace with the actual value --> </p>
 
     <!-- Display AC state with a toggle button -->
-    <!-- Use actual values of "ac" to determine the link -->
-    <a href="/AC">Turn AC On</a>
-    <!-- OR -->
-    <a href="/Auto">Turn AC Off</a>
 
-    <!-- Display Fan1 state with a toggle button -->
-    <!-- Use actual values of "fan1" to determine the link -->
-    <a href="/Fan">Turn Fan1 On</a>
-    <!-- OR -->
-    <a href="/Auto">Turn Fan1 Off</a>
+    <a href="/ac">AC Mode</a>
+
+    <a href="/freecooling">Freecooling</a>
+
+    <a href="/freecooling_turbo">Freecooling Turbo</a>
+
+    <a href="/passive">Passive</a>
+
+    <a href="/auto">Auto</a>
 </body>
 </html>
