--- a/envirozen/controller/templates/server.html
+++ b/envirozen/controller/templates/server.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Server Room Cooling Mode!</h1>
+    <iframe src="http://192.168.88.88:3000/d/b45327e0-a7d5-43a4-ab2d-29301d9a4a46/sensors?orgId=1&refresh=10s&viewPanel=1&theme=light" width="1200" height="650"></iframe>
     <hr>
     <h2>Temperatures:</h2>
     <p>Hot Aisle: {{ metric_values.get('temperature_hot', 'N/A') }}°C</p>
@@ -16,10 +17,10 @@
     <!-- Add similar lines for other metrics -->
 
     <h2>Manually Override the Cooling Mode of the Room!!</h2>
-    <p>AC - State: <!-- Replace with the actual value --> </p>
-    <p>Fan1 - State: <!-- Replace with the actual value --> </p>
-    <p>Fan2 - State: <!-- Replace with the actual value --> </p>
-    <p>Actuator - State: <!-- Replace with the actual value --> </p>
+    <p>AC - State: {{ metric_values.ac_pin_state }}</p>
+    <p>Fan1 - State: {{ metric_values.fan1_pin_state }}</p>
+    <p>Fan2 - State: {{ metric_values.fan2_pin_state }}</p>
+    <p>Damper - State: {{ metric_values.damper_pin_state }}</p>
 
     <!-- Display AC state with a toggle button -->
 
